Remove unnecessary code

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </a>
         </div>
-        <div class="card last">
+        <div class="card">
             <a href="#">
                 <div class="card-bg">
                     <button class="edit-button hidden">edit</button>
