Update animation style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button onclick="addCards()">Add Cards</button>
+    <button onclick="addCard()">Add Cards</button>
     <main class="container" id="container">
         <div class="card" draggable="true">
             <a href="#" draggable="false">
