--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
         </div>
         <div class="card">
             <a href="#">
-                <div class="card-bg">
-                    <button class="edit-button hidden">edit</button>
-                    <p>Text</p>
+                <div class="add-btn">
                 </div>
             </a>
         </div>
