Replace input type submit to button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <input type="file" name="input-image" id="input-image" hidden onchange="updateImageDisplay()" accept="image/*">
                 </div>
                 
-                <input type="submit" onclick="addCard()" value="&#10004;">
+                <button onclick="addCard()">&#10004;</button>
             </form>
         </div>
         <!--Sample card-->
