--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button onclick="addCard()">Add Cards</button>
     <main class="container" id="grid">
         <div class="card add" id="add-card">
-            <form class="card-add" id="add-card-bg">
+            <form class="card-add" id="add-card-bg" action="#">
                 <h5>Create Directory</h5>
                 <div class="row">
                     <span class="material-icons">
@@ -31,7 +31,7 @@
                         wallpaper
                     </span>
                     <label for="input-image" id="label-image">Browse...</label>
-                    <input type="file" name="input-image" id="input-image" hidden onchange="updateImageDisplay()" accept="image/*">
+                    <input type="file" name="" id="input-image" hidden onchange="updateImageDisplay()" accept="image/*">
                 </div>
                 
                 <button onclick="addCard()">&#10004;</button>
