Add limit to title length

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <span class="material-icons">
                         title
                     </span>
-                    <input type="text" name="" id="input-title" placeholder="Title">
+                    <input type="text" name="" id="input-title" placeholder="Title" maxlength="64">
                 </div>
                 
                 <div class="row">
