Update onclick function

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       <title>Document</title>
 </head>
 <body>
-    <button onclick="addCard()">Add Cards</button>
+    <button onclick="createDirectory(event)">Add Cards</button>
     <main class="container" id="grid">
         <div class="card add" id="add-card">
-            <form class="card-add" id="add-card-bg" onsubmit="addCard(event)" action="#">
+            <form class="card-add" id="add-card-bg" onsubmit="createDirectory(event)" action="#">
                 <h5>Create Directory</h5>
                 <div class="row">
                     <span class="material-icons">
