Add function to save as JSON file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <button onclick="createDirectory(event)">Add Cards</button>
+    <button onclick="saveJsonFile()">Add Cards</button>
     <main class="container" id="grid">
         <div class="card add" id="add-card">
             <form class="card-add" id="add-card-bg" onsubmit="createDirectory(event)" action="#">
