--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         wallpaper
                     </span>
                     <label for="input-image" id="label-image">Browse...</label>
-                    <input type="file" name="" id="input-image" hidden onchange="updateImageDisplay()" accept="image/*">
+                    <input type="file" name="" id="input-image" hidden onchange="updateImageDisplay(this)" accept="image/*">
                 </div>
 
                 <input type="submit" value="&#10004;">
