--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Document</title>
+    <title>Click Directory</title>
 </head>
 
 <body>
-    <button onclick="saveJsonFile()">Add Cards</button>
+    <button onclick="saveToJsonFile()">Add Cards</button>
     <main class="container" id="grid">
         <div class="card add" id="add-card">
             <form class="card-add" id="add-card-bg" onsubmit="createDirectory(event)" action="#">
