--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
-    <button onclick="saveToJsonFile()">Add Cards</button>
+    <button onclick="saveToJsonFile()">Save to file</button>
+    <button onclick="loadFromJsonFile()">Load from file</button>
+    <button onclick="loadFromJsonFile()">Reset LocalStorage</button>
     <main class="container" id="grid">
         <!--Add card-->
         <div class="card" id="add-card">
             <!--Edit card's temp location-->
-            <form class="card-form card-edit" id="edit-card" action="#">
+            <form class="card-form card-edit" id="edit-form" action="#">
                 <h5>Edit Directory</h5>
                 <div class="row">
                     <span class="material-icons">
@@ -33,7 +35,7 @@
                     <span class="material-icons">
                         wallpaper
                     </span>
-                    <label for="input-image" id="label-image">Browse...</label>
+                    <label for="edit-image" id="label-image">Browse...</label>
                     <input type="file" name="image" id="edit-image" hidden accept="image/*">
                 </div>
                 <div class="row button-row">
@@ -42,7 +44,7 @@
                     <button class="material-icons cancel-button" value="cancel">close</button>
                 </div>
             </form>
-            <form class="card-form card-add" id="add-card-bg" action="#">
+            <form class="card-form card-add" id="add-form" action="#">
                 <h5>Create Directory</h5>
                 <div class="row">
                     <span class="material-icons">
@@ -60,7 +62,7 @@
                     <span class="material-icons">
                         wallpaper
                     </span>
-                    <label for="input-image" id="label-image">Browse...</label>
+                    <label for="input-image" id="label-edit-image">Browse...</label>
                     <input type="file" name="image" id="input-image" hidden accept="image/*">
                 </div>
                 <div class="row button-row">
