Add localStorage functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <button onclick="saveToJsonFile()">Save to file</button>
     <button onclick="loadFromJsonFile()">Load from file</button>
-    <button onclick="loadFromJsonFile()">Reset LocalStorage</button>
+    <button onclick="deleteLocalStorage()">Reset LocalStorage</button>
     <main class="container" id="grid">
         <!--Add card-->
         <div class="card" id="add-card">
