Disable autocomplete for text fields

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <!--Add card-->
         <div class="card" id="add-card">
             <!--Edit card's temp location-->
-            <form class="card-form card-edit" id="edit-form" action="#">
+            <form class="card-form card-edit" id="edit-form" action="#" autocomplete="off">
                 <h5>Edit Directory</h5>
                 <div class="row">
                     <span class="material-icons">
                         title
                     </span>
-                    <input type="text" name="title" id="edit-title" placeholder="Title" maxlength="64">
+                    <input type="text" name="title" id="edit-title" placeholder="Title" maxlength="64" >
                 </div>
                 <div class="row">
                     <span class="material-icons">
@@ -44,7 +44,7 @@
                     <button class="material-icons cancel-button" value="cancel">close</button>
                 </div>
             </form>
-            <form class="card-form card-add" id="add-form" action="#">
+            <form class="card-form card-add" id="add-form" action="#" autocomplete="off">
                 <h5>Create Directory</h5>
                 <div class="row">
                     <span class="material-icons">
