Rearrange test buttons

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <button onclick="saveToJsonFile()">Save to file</button>
-    <button onclick="loadFromJsonFile()">Load from file</button>
     <button onclick="deleteLocalStorage()">Reset LocalStorage</button>
+    <button onclick="saveToJsonFile()">Save to file</button>
+    <input type="file" onclick="loadFromJsonFile()">Load from file</button>
     <main class="container" id="grid">
         <!--Add card-->
         <div class="card" id="add-card">
