Add load from backup functionality

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <button onclick="deleteLocalStorage()">Reset LocalStorage</button>
-    <button onclick="saveToJsonFile()">Save to file</button>
-    <input type="file" onclick="loadFromJsonFile()">Load from file</button>
+    <button onclick="saveToJsonFile()">Create backup</button>
+    <input type="file" id="load-json">Load backup</button>
     <main class="container" id="grid">
         <!--Add card-->
         <div class="card" id="add-card">
