Update app title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       name="description"
       content="A personal collection of your favorite links in one page."
     />
-    <title>Vite App</title>
+    <title>Click Directory</title>
   </head>
   <body class="bg-slate-200">
     <div id="app"></div>
