--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link
+    href="/favicon-light.png"
+    rel="icon"
+    media="(prefers-color-scheme: light)"/>
+  <link
+    href="/favicon-dark.png"
+    rel="icon"
+    media="(prefers-color-scheme: dark)"
+  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
