--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     />
     <title>Click Directory</title>
   </head>
-  <body class="bg-slate-200">
+  <body class="bg-slate-200 dark:bg-slate-800">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
